@@ -1,5 +1,8 @@
 package com.mk.learn.error;
 
+import java.util.ArrayList;
+import java.util.List;
+
 /**
  * @program: learning-demo
  * @description: 运行时常量池异出
@@ -8,4 +11,16 @@ package com.mk.learn.error;
  **/
 public class RuntimeConstantPoolOOM {
 
+
+    /**注：1.8参数已失效
+     * VM ARGS:-XX:PermSize=10M -XX:MaxPermsSize=10M
+     */
+    public static void main(String[] args) {
+        List<String> list = new ArrayList<>();
+        int i = 0;
+        while (true) {
+            list.add(String.valueOf(i).intern());
+        }
+
+    }
 }
